[gd_scene load_steps=3 format=2]

[ext_resource path="res://_cli/scenes/cli_example_lobby.gd" type="Script" id=1]
[ext_resource path="res://ressources/themes/game_gui_theme.tres" type="Theme" id=2]

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="Center" type="CenterContainer" parent="."]
margin_left = 1.0
margin_right = 3841.0
margin_bottom = 2160.0
rect_min_size = Vector2( 3840, 2160 )
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Center"]
margin_left = 1354.0
margin_top = 785.0
margin_right = 2486.0
margin_bottom = 1374.0

[node name="LabelServerName" type="Label" parent="Center/VBox"]
margin_right = 1132.0
margin_bottom = 54.0
text = "Server X.X.X.X"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="Center/VBox"]
margin_top = 58.0
margin_right = 1132.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Center/VBox"]
margin_top = 82.0
margin_right = 1132.0
margin_bottom = 589.0

[node name="VBox" type="VBoxContainer" parent="Center/VBox/HBox"]
margin_right = 1132.0
margin_bottom = 507.0

[node name="HBox" type="HBoxContainer" parent="Center/VBox/HBox/VBox"]
margin_right = 1132.0
margin_bottom = 258.0

[node name="VBox4" type="VBoxContainer" parent="Center/VBox/HBox/VBox/HBox"]
margin_right = 140.0
margin_bottom = 258.0

[node name="Label" type="Label" parent="Center/VBox/HBox/VBox/HBox/VBox4"]
margin_right = 140.0
margin_bottom = 54.0
text = "Owner"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemListOwner" type="ItemList" parent="Center/VBox/HBox/VBox/HBox/VBox4"]
margin_top = 58.0
margin_right = 140.0
margin_bottom = 258.0
rect_min_size = Vector2( 50, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = true

[node name="VBox" type="VBoxContainer" parent="Center/VBox/HBox/VBox/HBox"]
margin_left = 144.0
margin_right = 464.0
margin_bottom = 258.0

[node name="Label" type="Label" parent="Center/VBox/HBox/VBox/HBox/VBox"]
margin_right = 320.0
margin_bottom = 54.0
text = "Players"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemListPlayers" type="ItemList" parent="Center/VBox/HBox/VBox/HBox/VBox"]
margin_top = 58.0
margin_right = 320.0
margin_bottom = 258.0
rect_min_size = Vector2( 320, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = true

[node name="VBox2" type="VBoxContainer" parent="Center/VBox/HBox/VBox/HBox"]
margin_left = 468.0
margin_right = 664.0
margin_bottom = 258.0

[node name="Label" type="Label" parent="Center/VBox/HBox/VBox/HBox/VBox2"]
margin_right = 196.0
margin_bottom = 54.0
text = "Latency"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemListPing" type="ItemList" parent="Center/VBox/HBox/VBox/HBox/VBox2"]
margin_top = 58.0
margin_right = 196.0
margin_bottom = 258.0
rect_min_size = Vector2( 80, 200 )
size_flags_vertical = 3
auto_height = true

[node name="VBox3" type="VBoxContainer" parent="Center/VBox/HBox/VBox/HBox"]
margin_left = 668.0
margin_right = 808.0
margin_bottom = 258.0

[node name="Label" type="Label" parent="Center/VBox/HBox/VBox/HBox/VBox3"]
margin_right = 140.0
margin_bottom = 54.0
text = "Ready"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemListReady" type="ItemList" parent="Center/VBox/HBox/VBox/HBox/VBox3"]
margin_top = 58.0
margin_right = 140.0
margin_bottom = 258.0
rect_min_size = Vector2( 80, 200 )
size_flags_vertical = 3
auto_height = true

[node name="ButtonKick" type="Button" parent="Center/VBox/HBox/VBox/HBox"]
margin_left = 812.0
margin_top = 99.0
margin_right = 1132.0
margin_bottom = 159.0
size_flags_vertical = 4
text = "Kick Player"

[node name="MarginContainer" type="MarginContainer" parent="Center/VBox/HBox/VBox"]
margin_top = 262.0
margin_right = 1132.0
margin_bottom = 277.0
rect_min_size = Vector2( 0, 15 )

[node name="ButtonLeave" type="Button" parent="Center/VBox/HBox/VBox"]
margin_top = 281.0
margin_right = 1132.0
margin_bottom = 341.0
text = "Leave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="Center/VBox/HBox/VBox"]
margin_top = 345.0
margin_right = 1132.0
margin_bottom = 360.0
rect_min_size = Vector2( 0, 15 )

[node name="ButtonReady" type="Button" parent="Center/VBox/HBox/VBox"]
modulate = Color( 1, 0.952941, 0.729412, 1 )
margin_top = 364.0
margin_right = 1132.0
margin_bottom = 424.0
text = "READY !"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="Center/VBox/HBox/VBox"]
margin_top = 428.0
margin_right = 1132.0
margin_bottom = 443.0
rect_min_size = Vector2( 0, 15 )

[node name="ButtonLaunch" type="Button" parent="Center/VBox/HBox/VBox"]
modulate = Color( 1, 0.952941, 0.729412, 1 )
margin_top = 447.0
margin_right = 1132.0
margin_bottom = 507.0
text = "LAUNCH !"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Center/VBox/HBox/VBox/HBox/ButtonKick" to="." method="_on_ButtonKick_pressed"]
[connection signal="pressed" from="Center/VBox/HBox/VBox/ButtonLeave" to="." method="_on_ButtonLeave_pressed"]
[connection signal="pressed" from="Center/VBox/HBox/VBox/ButtonReady" to="." method="_on_ButtonReady_pressed"]
[connection signal="pressed" from="Center/VBox/HBox/VBox/ButtonLaunch" to="." method="_on_ButtonLaunch_pressed"]
